feat: complete system overhaul
- Aesthetics: Arc-Dark (Tech/Nord style), Papirus Icons, Apple Emojis
- Config: Selective Antigravity Sync, Cross-DE Cleanup
- Optimization: Animation tuning, Safe Delete, Code Refactoring

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,8 @@
 .state_protected
+
+# Antigravity Data & Cache
+data/Antigravity/Cache/
+data/Antigravity/Code Cache/
+data/Antigravity/GPUCache/
+data/Antigravity/logs/
+data/Antigravity/User/History/
